alignment of text is now fixed

--- a/about.css
+++ b/about.css
@@ -65,6 +65,7 @@ body {
 	display: flex;
 	flex-direction: column;
 	align-items: center;
+
 }
 
 .links {
@@ -208,7 +209,13 @@ body {
 	display: flex;
 	flex-direction: row;
 }
-
+.heading-container {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	text-align: center;
+  }
 .heading-icon-container {
 	text-align: center;
 	padding-left: 2rem;
@@ -372,5 +379,14 @@ body {
 		text-align: justify;
 		margin: 0 auto;
 		max-width: 70vw;
+		margin-bottom: 2rem;
 	}
+	.heading-container {
+		display: flex;
+		flex-direction: column;
+		justify-content: center;
+		align-items: center;
+		text-align: center;
+	  }
+	  
 }
